# Lab1

./: .gitignore  pyproject.toml  readme.md
reports/: historico_hiperparametros.csv  quantization_validation_report.json  training_analysis_summary.txt  training_metrics_multiclasse.json
scripts/: analyze_training_results.py  analyzer.py  build_dataset.py  explorer_lfw.py  explorer_selfies.py  inference_webcam.py  preprocess_known.py  preprocess_unknown.py  record_video.py  test_model.py  train.py
src/: augmentation.py  config.py  data_utils.py  dataset_manager.py  engine.py  evaluator.py  export_mif.py  main.py  model.py  model_io.py  pipeline.py  preprocessor.py  quantization.py
